--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <div id="sub-header">Never use an insecure password again.</div>
         </div>
         <div id="item-two">
-            <button id="gen-pass-btn">Generate passwords</button>
+            <button id="gen-pass-btn" onclick="generatePasswords()">Generate passwords</button>
         </div>
         <hr>
         <div id="item-three">
-            <button class="pass-btn"></button>
-            <button class="pass-btn"></button>
+            <button id="pass-btn-one"></button>
+            <button id="pass-btn-two"></button>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
