Clear output fields when pressing password button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="sub-header">Never use an insecure password again.</div>
         </div>
         <div id="item-two">
-            <button id="gen-pass-btn" onclick="generatePasswords()">Generate passwords</button>
+            <button id="gen-pass-btn" onclick="passwords()">Generate passwords</button>
         </div>
         <hr>
         <div id="item-three">
