Implement password length feature

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
             <div id="sub-header">Never use an insecure password again.</div>
         </div>
         <div id="item-two">
-            <button id="gen-pass-btn" onclick="passwords()">Generate passwords</button>
+            <input type="text" id="length-input-el" placeholder="Password Length" maxlength="">
+            <button id="gen-pass-btn" onclick="passwords()">Generate</button>
         </div>
         <hr>
         <div id="item-three">
-            <button id="pass-btn-one"></button>
-            <button id="pass-btn-two"></button>
+            <button id="pass-one"></button>
+            <button id="pass-two"></button>
         </div>
     </div>
     <script src="javascript.js"></script>
