--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <div id="sub-header">Never use an insecure password again.</div>
         </div>
         <div id="item-two">
-            <!-- <input type="number" id="length-input-el" placeholder="Password Length" value="15" min="8" max="100"> -->
             <button id="gen-pass-btn" onclick="passwords()">Generate</button>
-            <input type="range" id="length-input-el" value="15" min="8" max="100">
-            <p>Password Length: <span id="slider-output-el"></span></p>
+            <div id="slider">
+                <input type="range" id="length-input-el" value="15" min="8" max="100">
+                <div>Password Length: <span id="slider-output-el"></span></div>
+            </div>
         </div>
-        <hr>
         <div id="item-three">
             <button id="pass-one"></button>
             <button id="pass-two"></button>
