Implement copy password feature

--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
             </div>
         </div>
         <div id="item-three">
-            <button id="pass-one"></button>
-            <button id="pass-two"></button>
+            <div class="child">
+                <div id="pass-one"></div>
+                <button onclick="copyOnClick('one')">Copy</button>
+            </div>
+            <div class="child">
+                <div id="pass-two"></div>
+                <button onclick="copyOnClick('two')">Copy</button>
+            </div>
         </div>
     </div>
     <script src="javascript.js"></script>
