--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
     <div class="container">
         <div id="item-one">
-            <h1>Generate a <br> random password</h1>
+            <h1>Generate a <div id="h1-secondary-color">random password</div></h1>
             <div id="sub-header">Never use an insecure password again.</div>
         </div>
+    <hr>
         <div id="item-two">
             <div class="customize">Customize</div>
             <div id="settings">
@@ -24,15 +25,16 @@
                     <input type="range" id="length-input-el" value="15" min="8" max="100">
                 </div>
                 <div id="symbols">
-                    <input id="checkbox-s" type="checkbox" onclick="checkBox()">
+                    <input id="checkbox-s" type="checkbox" onclick="checkBox()" checked>
                     <label for="checkbox-s">Symbols</label>
                 </div>
                 <div id="numbers">
-                    <input id="checkbox-n" type="checkbox" onclick="checkBox()">
+                    <input id="checkbox-n" type="checkbox" onclick="checkBox()" checked>
                     <label for="checkbox-n">Numbers</label>
                 </div>
             </div>
             <button id="gen-pass-btn" onclick="passwords()">Generate</button>
+    <hr>
         </div>
         <div id="item-three">
             <div class="child">
